header og content

--- a/NaturePlanetSolutionCore/Views/Home/Index.cshtml
+++ b/NaturePlanetSolutionCore/Views/Home/Index.cshtml
@@ -2,7 +2,16 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="content-container">
+    <div class="content">
+        <h1 class="content-h">Nature Planet - Leading with Quality and Responsibility</h1>
+        <p class="content-p">Nature Planet is proud to be one of the world’s leading designers and distributors of high-quality toys, souvenirs and accessories for attractions and tourist destinations.
+
+            Responsibility is at the heart of everything we do. From the initial design to product development, we prioritize minimizing our environmental impact.
+
+            Our mantra—Reduce, Reuse, Recycle—guides us in creating innovative products without compromising on quality.
+
+            From the very beginning, our mission has been clear: to make a difference by doing things differently and promoting positive change for the planet.</p>
+        <img src="Assets/Images/quality_and_sustainability.Jpg"/>
+    </div>
 </div>
