--- a/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
@@ -59,9 +59,7 @@
         </ul>
     </div>
     <nav class="category-nav">
-        <ul class="category-elements">
-            
-        </ul>
+        @await Component.InvokeAsync("CategoryMenu")
     </nav>
 </header>
 
