register og login

--- a/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                 <div class="user-dropdown">
                     <p>User</p>
                     <div class="user-dropdown-content">
-                        <button class="login-button">Log ind</button>
+                        <button asp-controller="User" asp-action="Login" class="login-button">Log ind</button>
                         <a href="">Get username</a>
                         <a href="">Glemt din adgangskode?</a>
                         <a href="">Min profil</a>
