--- a/NaturePlanetSolutionCore/Views/Shared/Components/CategoryMenu/Default.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/Components/CategoryMenu/Default.cshtml
@@ -1,5 +1,5 @@
 @model List<string>
-
+<<link rel="stylesheet" href="css/navbar.css">
 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     @foreach (var category in Model)
     {
