--- a/NaturePlanetSolutionCore/Views/User/Login.cshtml
+++ b/NaturePlanetSolutionCore/Views/User/Login.cshtml
@@ -4,7 +4,7 @@
     <div class="col-md-6 col-lg-4 p-4 shadow rounded bg-white">
         <h2 class="text-center mb-4 text-success">Login</h2>
 
-        <form asp-action="Register" method="post" novalidate>
+        <form asp-controller="User" asp-action="Login" method="post" novalidate>
             <div class="mb-3">
                 <label asp-for="Email" class="form-label fw-semibold"></label>
                 <input asp-for="Email" class="form-control" placeholder="you@example.com" />
