--- a/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
@@ -57,7 +57,10 @@
                 </li>
                 <li>
                     <div class="region-container">
-                        <button class="region-button">Europe</button>
+                        <select class="region-button form-select">
+                            <option>Europe</option>
+                            <option>North America</option>
+                        </select>
                     </div>
                 </li>
             </ul>
