--- a/NaturePlanetSolutionCore/Views/Shared/Components/CategoryMenu/Default.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/Components/CategoryMenu/Default.cshtml
@@ -1,12 +1,39 @@
-@model List<string>
-<<link rel="stylesheet" href="css/navbar.css">
-<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+@model List<NaturePlanetSolutionCore.ViewComponents.CategoryMenuViewComponent.CategoryViewModel>
+
+<ul class="navbar-nav category-menu">
     @foreach (var category in Model)
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Products" asp-action="ByCategory" asp-route-category="@category">
-                @category
-            </a>
+        <li class="nav-item dropdown">
+            <a class="nav-link text-white">@category.Name</a>
+
+            @if (category.Subcategories.Any())
+            {
+                <ul class="dropdown-menu">
+                    @foreach (var sub in category.Subcategories)
+                    {
+                        <li class="dropdown-subitem">
+                            <a class="dropdown-item">@sub.Name</a>
+
+                            @if (sub.SubSubcategories.Any())
+                            {
+                                <ul class="dropdown-submenu">
+                                    @foreach (var subsub in sub.SubSubcategories)
+                                    {
+                                        <li>
+                                            <a class="dropdown-item"
+                                               asp-controller="Products"
+                                               asp-action="ByCategory"
+                                               asp-route-category="@subsub">
+                                                @subsub
+                                            </a>
+                                        </li>
+                                    }
+                                </ul>
+                            }
+                        </li>
+                    }
+                </ul>
+            }
         </li>
     }
 </ul>
