--- a/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
@@ -13,8 +13,8 @@
 <header>
     <div class="header-top">
         <div class="logo-container">
-            <a class="logo-ref" href="/index">
-                <img class="logo-img" src="Assets/Images/NaturePlanet_logo.svg"/>
+            <a class="logo-ref" href="/">
+                <img class="logo-img" src="~/Assets/Images/NaturePlanet_logo.svg"/>
             </a>
         </div>
         <div class="search-container">
