--- a/NaturePlanetSolutionCore/Views/Products/Details.cshtml
+++ b/NaturePlanetSolutionCore/Views/Products/Details.cshtml
@@ -28,10 +28,13 @@
 
 @if (User.Identity.IsAuthenticated)
 {
-   <button class="to-order-button"
-           asp-controller="Products"
-           asp-action="AddToOrder"
-           asp-route-productName="@Model.Name">
-      Tilføj til kurv
-   </button>
+   @using (Html.BeginForm("AddToOrder", "Products", FormMethod.Post))
+   {
+      <button class="to-order-button"
+              asp-controller="Products"
+              asp-action="AddToOrder"
+              asp-route-productName="@Model.Name">
+         Tilføj til kurv
+      </button>
+   }
 }
