--- a/NaturePlanetSolutionCore/Views/Products/Index.cshtml
+++ b/NaturePlanetSolutionCore/Views/Products/Index.cshtml
@@ -1,4 +1,4 @@
-@model List<DataTransferLayer.Model.Product>
+@model List<DataTransferLayer.Model.ProductDto>
 
 <div class="product-container">
     @foreach (var product in @Model)
