--- a/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
@@ -29,7 +29,15 @@
         </div>
         <div class="nav-container">
             <ul class="nav-elements">
+                    <li>
+                        <div class="cart">
+
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                            <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z" />
+                        </svg>
+            </div></li>
                 <li>
+                        
                     <div class="user-dropdown">
                         <p>User</p>
                         <div class="user-dropdown-content">
@@ -68,6 +76,7 @@
                     </div>
                 </li>
             </ul>
+            
         </div>
     </div>
     <nav class="category-nav">
