--- a/NaturePlanetSolutionCore/Views/Shared/Components/Cart/Default.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/Components/Cart/Default.cshtml
@@ -16,7 +16,7 @@
         }
         <div class="button-container">
             <button class="checkout-button">Checkout</button>
-            <button class="viewcart-button">View cart</button>
+            <a asp-controller="User" asp-action="Cart" class="viewcart-button">View Cart</a>
         </div>
     </div>
 </div>
