--- a/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                             @if (User.Identity.IsAuthenticated)
                             {
                                 <a asp-controller="User" asp-action="Profile">Profile</a>
-                                <a asp-controller="User" asp-action="ViewOrder">Se Ordre</a>
+                                <a asp-controller="User" asp-action="ViewOrders">Order History</a>
                                 <a asp-controller="User" asp-action="Logout">Logout</a>
                             }
                             else
