--- a/NaturePlanetSolutionCore/Views/Shared/Components/Cart/Default.cshtml
+++ b/NaturePlanetSolutionCore/Views/Shared/Components/Cart/Default.cshtml
@@ -20,3 +20,10 @@
         </div>
     </div>
 </div>
+
+<style>
+    .cart-dropdown:hover .cart-dropdown-content,
+    .cart-dropdown:focus-within .cart-dropdown-content {
+        display: block;
+    }
+</style>
